Atualização da Interface

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -2,6 +2,8 @@
 
 :root {
     --orange: #ff8139;
+    --silver: #c0c0c0;
+    --greyb: #3d3d3d;
     --pink: #ff3998;
     --green: #39ffa0;
     --red: #ff3939;
