--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -24,7 +24,7 @@ nav {
                 }
                 &:last-of-type {
                     a {
-                        color: var(--pink);
+                        color: var(--silver);
                     }
                 }
             }
