--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,5 +1,6 @@
 footer {
     margin: 6rem 0;
+    
     display: flex;
     padding: 2rem;
     flex-direction: column;
@@ -14,6 +15,8 @@ footer {
         gap: 1.5rem;
         .brand {
           img {
+            width: 300px;
+            margin-left: -15px;
           }
         }
         p {
@@ -41,28 +44,10 @@ footer {
             list-style-type: none;
             display: flex;
             flex-direction: column;
+            
             gap: 1rem;
             li {
             }
-          }
-        }
-      }
-    }
-    .lower {
-      display: flex;
-      justify-content: space-between;
-      span {
-        color: var(--accent-color3);
-      }
-    }
-  }
-  
-  [data-theme="light"] {
-    footer {
-      .brand-container {
-        .brand {
-          img {
-            filter: brightness(0);
           }
         }
       }
@@ -85,10 +70,6 @@ footer {
             gap: 1rem;
           }
         }
-      }
-      .lower {
-        flex-direction: column;
-        gap: 1rem;
       }
     }
   }
