--- a/src/scss/components/_scrollToTop.scss
+++ b/src/scss/components/_scrollToTop.scss
@@ -7,7 +7,6 @@
     bottom: 5%;
     right: 5%;
     border-radius: 5rem;
-    background-color: red;
     height: 4rem;
     width: 4rem;
     border: solid 3px transparent;
@@ -15,7 +14,7 @@
         rgba(255, 255, 255, 0),
         rgba(255, 255, 255, 0)
       ),
-      linear-gradient(101deg, var(--pink), var(--orange));
+      linear-gradient(101deg, var(--silver), var(--greyb));
     background-origin: border-box;
     background-clip: content-box, border-box;
     box-shadow: 2px 1000px 1px var(--background) inset;
